# travelGuard-claim-automation

./: .gitignore  CLAUDE.md  POC-Spec.md  README.md  project.md
backend/: .env.example  .gitignore  CLAUDE.md  config.py  main.py  model-explanation.md  pyproject.toml
backend/adapters/: base.py  generate_master_policy_pdf.py  mock_nn_travel.py  mock_policies.json  router.py
backend/engine/: demo_decisions.py  demo_profiles.py  model.py  rule_engine.py
backend/engine/prompts/: claim_assessment_system_prompt.txt  evidence_analyst_system_prompt.txt
backend/models/: claim.py  decision.py  policy.py
backend/routers/: claims.py
backend/scripts/: upload_demo_docs.py
backend/services/: claim_service.py  pipeline_service.py
backend/utils/: rate_limit.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/app/status/: page.tsx
frontend/app/submit/: page.tsx
frontend/components/: ClaimResult.tsx  DocumentSlot.tsx  Footer.tsx  StatusContent.tsx
frontend/components/ClaimForm/: StepDocuments.tsx  StepInsuranceDetails.tsx  StepPersonalDetails.tsx  StepReview.tsx  index.tsx  schema.ts
frontend/hooks/: useClaimStatus.ts
frontend/lib/: api.ts  claimTypes.ts  demoProfiles.ts  documentSlots.ts  storage.ts  utils.ts
frontend/types/: claim.ts
